package main.interfaces;

public interface Assicurabile {
    double getCostoAssicurazione();

}
