package main.interfaces;

public interface VeicoloElettrico {
    double getAutonomiaBatteria();
    public void ricarica();
}
