package main.mechanics;

public class Motore {
    private int serie;
    private String modello;

    public Motore(String modello, int serie) {
        this.modello = modello;
        this.serie = serie;
    }
}
